Major changes - Backend Pages Creaeted

--- a/accounts.html
+++ b/accounts.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.min.css">
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>My Doubble Dashboard - Doubble by Sterling</title>
+  <title>My Accounts - Doubble by Sterling</title>
   <meta name="description" content="Doubble is an investment">
   <meta name="keywords" content="Money, Investment">
   <meta name="author" content="Doubble by Sterling Bank Plc">
@@ -48,14 +48,14 @@
     <div class="container pt-5">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="display-1 welcome-title">Welcome! Otobong</h1> 
-          <a class="btn btn-danger font-weight-bold" href="#">New Classic <span class="d-none d-sm-inline">Application</span></a> 
-          <a class="btn btn-info font-weight-bold .d-sm-none .d-md-block" href="#">New Target <span class="d-none d-sm-inline">Application</span></a>
+            <h1 class="display-1 welcome-title">Welcome! Otobong</h1> 
+            <a class="btn btn-danger font-weight-bold" href="#">New Classic <span class="d-none d-sm-inline">Application</span></a> 
+            <a class="btn btn-info font-weight-bold .d-sm-none .d-md-block" href="#">New Target <span class="d-none d-sm-inline">Application</span></a>
         </div>
         <div class="col-md-3"></div>
         <div class="col-md-3">
             <div class="float-right pt-3 badge-icon">
-                <span>Explorer</span> <img class="img-fluid" src="assets/img/full-star.png" width="30px">
+                Explorer <img class="img-fluid" src="assets/img/full-star.png" width="30px">
             </div>
         </div>
       </div>
@@ -67,42 +67,36 @@
       <div class="row">
         <div class="col-md-8">
           <div class="row">
-            <div class="col-md-6">
-              <div class="card text-white bg-primary mb-3">
-                <div class="card-header small font-weight-bold">View Investment</div>
-                <div class="card-body">
-                  <h5 class="card-title">Target Dollar</h5>
-                  <p class="card-text">December 2018 - December 2020<br>Beneficiary: Self</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="card text-white bg-dark mb-3">
-                <div class="card-header small font-weight-bold">View Investment</div>
-                <div class="card-body">
-                  <h5 class="card-title">Target Naira</h5>
-                  <p class="card-text">December 2018 - December 2020<br>Beneficiary: Self</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="card text-white bg-info mb-3">
-                <div class="card-header small font-weight-bold">View Investment</div>
-                <div class="card-body">
-                  <h5 class="card-title">Doubble 3</h5>
-                  <p class="card-text">December 2018 - December 2020<br>Beneficiary: Anita Okoko</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="card text-white bg-info mb-3">
-                <div class="card-header small font-weight-bold">View Investment</div>
-                <div class="card-body">
-                  <h5 class="card-title">Doubble 1</h5>
-                  <p class="card-text">January 2019 - January 2020<br>Beneficiary: Self</p>
-                </div>
-              </div>
-            </div>
+            <h1 class="lead welcome-title text-uppercase pl-3 mb-3 font-weight-bold d-block">My Accounts</h1>
+            <div class="d-block pl-3 pt-1">Here are a list of your Accounts in Sterling Bank</div>
+            <div class="table-responsive px-3">
+                    <table class="table table-striped table-borderless">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Account Number</th>
+                          <th scope="col">Account Type</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>12022888129</td>
+                          <td>Dollar Account</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>00012123322</td>
+                          <td>Current Account</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td>00411224411</td>
+                          <td>Savings Account</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
           </div>
         </div>
         <div class="col-md-4">
@@ -113,11 +107,11 @@
               <a class="btn btn-primary btn-sm" href="#">Open Dollar Account</a>
             </div>
             <ul class="list-group">
-              <a href="accounts.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Accounts<br><i class="fa fa-list text-muted fa-lg"></i></li></a>
-              <a href="investments.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Investments<br><i class="fa fa-pie-chart text-muted fa-lg"></i></li></a>
-              <a href="faq.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Frequently Asked Questions<br><i class="fa fa-book text-muted fa-lg"></i></li></a>
-              <a href="settings.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Change Password<br><i class="fa fa-cog text-muted fa-lg"></i></li></a>
-              <a href="login.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase"> Log Out <i class="fa fa-sign-out text-muted fa-lg"></i></li></a>
+                <a href="accounts.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Accounts<br><i class="fa fa-list text-muted fa-lg"></i></li></a>
+                <a href="investments.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Investments<br><i class="fa fa-pie-chart text-muted fa-lg"></i></li></a>
+                <a href="faq.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Frequently Asked Questions<br><i class="fa fa-book text-muted fa-lg"></i></li></a>
+                <a href="settings.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Change Password<br><i class="fa fa-cog text-muted fa-lg"></i></li></a>
+                <a href="login.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase"> Log Out <i class="fa fa-sign-out text-muted fa-lg"></i></li></a>
             </ul>
           </div>
         </div>
