--- a/register.html
+++ b/register.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="msapplication-TileColor" content="#a00065">
-    <meta name="msapplication-TileImage" content="assets/img/doubble-icon.png">
+    <meta name="msapplication-TileImage" content="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-icon.png">
     <meta name="theme-color" content="#00CCFF">
-    <link rel="manifest" href="assets/manifest.json">
+    <link rel="manifest" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/manifest.json">
 
     <title>New Profile Registration - Doubble by Sterling</title>
-    <meta name="description" content="SpectaBasic Login">
-    <meta name="keywords" content="Loans in 5 minutes">
-    <meta name="author" content="Specta by Sterling Bank Plc">
-    <link rel="icon" href="assets/favicon.ico">
+    <meta name="description" content="Create a Free Account on Doubble. Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
+    <meta name="author" content="Doubble by Sterling Bank Plc">
+    <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
+
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="assets/css/devices.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/main.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/custom.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/devices.css">
     <style>html,body{height:100%;padding:0;margin:0;}</style>
 </head>
 
@@ -31,15 +32,16 @@
             <div class="pl-5 pr-4">
                 <div class="row pt-5 pb-2">
                     <div class="col-md-12 mx-auto">
-                        <img src="assets/img/doubble-logo.png" class="w-40" alt="Doubble Logo">
+                        <img src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-logo.png" class="w-40"
+                            alt="Doubble Logo">
                     </div>
                 </div>
                 <h4 class="pt-5 font-weight-bold">Create your free account</h4>
-                <p>Why it's worth to register? Because Wozber will provide you the highest quality services:</p>
+                <p>Why it's worth to register? Because <b>Doubble</b> will provide you the highest investment options:</p>
                 <div>
                     <ul>
-                        <li>Save your resume progress</li>
-                        <li>Download your resume in PDF</li>
+                        <li>Save you time and reduce documentation</li>
+                        <li>Provide investment options in Naira &amp Dollar</li>
                         <li>Use your free account as long as you want</li>
                         <li>And of course, no spamming at any time!</li>
                     </ul>
@@ -51,18 +53,21 @@
             <div class="container py-5">
                 <div class="row mt-140">
                     <div class="offset-md-3 col-md-6 mb-3 text-center mx-auto">
-                        <img src="assets/img/doubble-logo.png" class="w-40" alt="Doubble Logo">
+                        <img src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-logo.png" class="w-40"
+                            alt="Doubble Logo">
                     </div>
                     <div class="offset-md-3 p-4 col-sm-10 col-md-6 col-lg-6 bg-light shadow-md">
                         <form class="needs-validation" novalidate="">
                             <div class="row mt-4">
                                 <div class="form-group col-md-6 mb-4">
-                                    <input type="text" class="input form-control form-border" id="firstName" required autocomplete="off">
+                                    <input type="text" class="input form-control form-border" id="firstName" required
+                                        autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="firstName">First Name</label>
                                     <div class="invalid-feedback"> First Name is required </div>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <input type="text" class="form-control form-border" id="lastName" required autocomplete="off">
+                                    <input type="text" class="form-control form-border" id="lastName" required
+                                        autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="lastName">Surname</label>
                                     <div class="invalid-feedback"> last name is required </div>
                                 </div>
@@ -81,17 +86,20 @@
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-6 mb-4">
-                                    <input type="text" class="form-control form-border" id="email" required autocomplete="off">
+                                    <input type="text" class="form-control form-border" id="email" required
+                                        autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="email">Email Address</label>
                                     <div class="invalid-feedback"> Email Address is required </div>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <input type="text" class="form-control form-border" id="mobile" required autocomplete="off">
+                                    <input type="text" class="form-control form-border" id="mobile" required
+                                        autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="mobile">Mobile Number</label>
                                     <div class="invalid-feedback"> Mobile Number is required </div>
                                 </div>
                             </div>
-                            <button class="btn btn-block btn-md btn-info mt-4 mb-3" type="submit"><span class="btn-text text-uppercase">Create Account</span></button>
+                            <button class="btn btn-block btn-md btn-info mt-4 mb-3" type="submit"><span class="btn-text text-uppercase">Create
+                                    Account</span></button>
                         </form>
                     </div>
                 </div>
@@ -99,8 +107,8 @@
                     <div class="row">
                         <div class="text-center col-md-6 mx-auto">
                             <p class="text-center text-light">
-                            <span class="text-secondary">Already a User?</span>
-                            <span><a class="text-info" href="index.html">Login</a></span></p>
+                                <span class="text-secondary">Already a User?</span>
+                                <span><a class="text-info" href="login.html">Login</a></span></p>
                         </div>
                     </div>
                 </div>
@@ -114,7 +122,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <!-- <script src="assets/js/validation.js"></script> -->
+    <!-- <script src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/validation.js"></script> -->
 </body>
 
 </html>
