--- a/index.html
+++ b/index.html
@@ -2,83 +2,82 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="msapplication-TileColor" content="#a00065">
-    <meta name="msapplication-TileImage" content="assets/img/doubble-icon.png">
-    <meta name="theme-color" content="#00CCFF">
-    <link rel="manifest" href="assets/manifest.json">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="msapplication-TileColor" content="#a00065">
+  <meta name="msapplication-TileImage" content="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-icon.png">
+  <meta name="theme-color" content="#00CCFF">
+  <link rel="manifest" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/manifest.json">
 
-    <title>My Doubble Login - Doubble by Sterling</title>
-    <meta name="description" content="SpectaBasic Login">
-    <meta name="keywords" content="Loans in 5 minutes">
-    <meta name="author" content="Specta by Sterling Bank Plc">
-    <link rel="icon" href="assets/favicon.ico">
-    <!-- CSS dependencies -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-        type="text/css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="assets/css/devices.css">
+  <title>My Doubble Login - Doubble by Sterling</title>
+  <meta name="description" content="Doubble - Login Page. Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+  <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
+  <meta name="author" content="Doubble by Sterling Bank Plc">
+  <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
+  <!-- CSS dependencies -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/main.css">
+  <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/custom.css">
+  <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/devices.css">
 </head>
 
 <body>
 
-        <div class="text-white align-items-center d-flex bg-image">
-                <div class="container">
-                  <div class="row text-left">
-                    <div class="col-md-12 mx-auto mt-3">
-                      <img src="assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
-                    </div>
-                  </div>
-                  <div class="row pt-5 login-box mt-5">
-                    <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
-                        <h5 class="mb-3 text-center text-primary"><b>Hello, welcome back!</b></h5>
-                    </div>
-                    <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
-                      <div class="row">
-                        <div class="offset-md-7 col-md-6 col-6 col-sm-12 col-lg-6">
-                          <span class="text-right"><a href="forgot.html">Forgot password?</a></span>
-                        </div>
-                      </div>
-                      <form class="needs-validation" novalidate="">
-                        <div class="row mt-4">
-                            <div class="form-group col-md-12 mb-4">
-                                <input type="text" class="input form-control form-border" id="username" required autocomplete="off">
-                                <label class="mb-0 form-control-placeholder" for="username">Username/Email</label>
-                                <div class="invalid-feedback"> Username is required </div>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <input type="password" class="form-control form-border" id="password" required autocomplete="off">
-                                <label class="mb-0 form-control-placeholder" for="password">Password</label>
-                                <div class="invalid-feedback"> Password is required </div>
-                            </div>
-                        </div>
-                        <button class="btn btn-block btn-md btn-info" type="submit"><span class="btn-text text-uppercase">Sign in</span></button>
-                      </form>
-                    </div>
-                  </div>
-                  <div class="py-2">
-                    <div class="row">
-                      <div class="text-center col-md-4 mx-auto mt-3">
-                        <p class="text-center text-secondary">
-                            <span>Don't have an account?</span>
-                            <span class="text-info"><a class="noul" href="register.html">Sign up for free</a></span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+  <div class="text-white align-items-center d-flex bg-image">
+    <div class="container">
+      <div class="row text-left">
+        <div class="col-md-12 mx-auto mt-3">
+          <img src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
+        </div>
+      </div>
+      <div class="row pt-5 login-box mt-5">
+        <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4">
+          <h5 class="mb-3 text-center text-primary"><b>Hello, welcome back!</b></h5>
+        </div>
+        <div class="offset-md-4 col-12 col-sm-12 p-4 col-md-6 col-lg-4 bg-light shadow-md">
+          <div class="row">
+            <div class="offset-md-7 col-md-6 col-6 col-sm-12 col-lg-6">
+              <span class="text-right"><a href="forgot.html">Forgot password?</a></span>
+            </div>
+          </div>
+          <form class="needs-validation" novalidate="">
+            <div class="row mt-4">
+              <div class="form-group col-md-12 mb-4">
+                <input type="text" class="input form-control form-border" id="username" required autocomplete="off">
+                <label class="mb-0 form-control-placeholder" for="username">Username/Email</label>
+                <div class="invalid-feedback"> Username is required </div>
               </div>
+              <div class="form-group col-md-12">
+                <input type="password" class="form-control form-border" id="password" required autocomplete="off">
+                <label class="mb-0 form-control-placeholder" for="password">Password</label>
+                <div class="invalid-feedback"> Password is required </div>
+              </div>
+            </div>
+            <button class="btn btn-block btn-md btn-info" type="submit"><span class="btn-text text-uppercase">Sign in</span></button>
+          </form>
+        </div>
+      </div>
+      <div class="py-2">
+        <div class="row">
+          <div class="text-center col-md-4 mx-auto mt-3">
+            <p class="text-center text-secondary">
+              <span>Don't have an account?</span>
+              <span class="text-info"><a class="noul" href="register.html">Sign up for free</a></span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <!-- <script src="assets/js/validation.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <!-- <script src= "https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/validation.js"></script> -->
 </body>
 
 </html>
