--- a/verify-email.html
+++ b/verify-email.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="msapplication-TileColor" content="#a00065">
-    <meta name="msapplication-TileImage" content="assets/img/doubble-icon.png">
+    <meta name="msapplication-TileImage" content="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-icon.png">
     <meta name="theme-color" content="#00CCFF">
-    <link rel="manifest" href="assets/manifest.json">
+    <link rel="manifest" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/manifest.json">
 
     <title>Email Verification - Doubble by Sterling</title>
-    <meta name="description" content="SpectaBasic Login">
-    <meta name="keywords" content="Loans in 5 minutes">
-    <meta name="author" content="Specta by Sterling Bank Plc">
-    <link rel="icon" href="assets/favicon.ico">
+    <meta name="description" content="Customer Email Verification. Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
+    <meta name="author" content="Doubble by Sterling Bank Plc">
+    <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
+
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="assets/css/devices.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/main.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/custom.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/devices.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
         <div class="container">
             <div class="row text-left mb-5">
                 <div class="col-md-12 mx-auto mt-3">
-                    <img src="assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
+                    <img src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/doubble-logo.png" class="w-10" alt="Doubble Logo">
                 </div>
             </div>
             <div class="row login-box mt-5" style="padding-top:25px;">
@@ -59,7 +60,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <!-- <script src="assets/js/validation.js"></script> -->
+    <!-- <script src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/validation.js"></script> -->
 </body>
 
 </html>
