Updates to all files

--- a/forgot.html
+++ b/forgot.html
@@ -11,8 +11,8 @@
     <link rel="manifest" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/manifest.json">
 
     <title>Password Recovery - Doubble by Sterling</title>
-    <meta name="description" content="Recover your Password. Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
-    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
+    <meta name="description" content="Recover your Password - Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
     <meta name="author" content="Doubble by Sterling Bank Plc">
     <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
     <!-- CSS dependencies -->
@@ -40,9 +40,9 @@
                     <form class="needs-validation" novalidate="">
                         <div class="row mt-4">
                             <div class="form-group col-md-12 mb-4">
-                                <input type="text" class="input form-control form-border" id="username" required
-                                    autocomplete="off">
+                                <input type="text" class="input form-control form-border" id="username" required autocomplete="off">
                                 <label class="mb-0 form-control-placeholder" for="username">Account Email Address</label>
+                                <small class="form-text text-muted">We'll never share your email with anyone else.</small> 
                                 <div class="invalid-feedback"> Account Email is required </div>
                             </div>
                         </div>
