--- a/register.html
+++ b/register.html
@@ -11,8 +11,8 @@
     <link rel="manifest" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/manifest.json">
 
     <title>New Profile Registration - Doubble by Sterling</title>
-    <meta name="description" content="Create a Free Account on Doubble. Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
-    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
+    <meta name="description" content="Create a Free Account on Doubble - Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
     <meta name="author" content="Doubble by Sterling Bank Plc">
     <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
 
@@ -89,6 +89,7 @@
                                     <input type="text" class="form-control form-border" id="email" required
                                         autocomplete="off">
                                     <label class="mb-0 form-control-placeholder" for="email">Email Address</label>
+                                    <small class="form-text text-muted">We'll never share your email with anyone else.</small> 
                                     <div class="invalid-feedback"> Email Address is required </div>
                                 </div>
                                 <div class="form-group col-md-6">
