--- a/dashboard.html
+++ b/dashboard.html
@@ -11,17 +11,18 @@
   <link rel="manifest" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.min.css">
-  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+  <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
+
   <title>My Doubble Dashboard - Doubble by Sterling</title>
-  <meta name="description" content="Doubble is an investment">
-  <meta name="keywords" content="Money, Investment">
+  <meta name="description" content="Dashboard - Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+  <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
   <meta name="author" content="Doubble by Sterling Bank Plc">
-  <link rel="icon" href="assets/favicon.ico">
+  <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="assets/css/custom.css">
-  <link rel="stylesheet" href="assets/css/devices.css">
+  <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/main.css">
+  <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/custom.css">
+  <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/devices.css">
   <script src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/navbar-ontop.js"></script>
 </head>
 
@@ -33,6 +34,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle  text-primary" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i></a>
             <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 36px, 0px); top: 0px; left: -120px; will-change: transform;">
+                <a class="dropdown-item" href="dashboard.html">Dashboard</a>
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="investments.html">My Investments</a>
                 <a class="dropdown-item" href="accounts.html">My Accounts</a>
                 <a class="dropdown-item" href="faq.html">Doubble FAQ</a>
@@ -49,13 +52,13 @@
       <div class="row">
         <div class="col-md-6">
           <h1 class="display-1 welcome-title">Welcome! Otobong</h1> 
-          <a class="btn btn-danger font-weight-bold" href="#">New Classic <span class="d-none d-sm-inline">Application</span></a> 
-          <a class="btn btn-info font-weight-bold .d-sm-none .d-md-block" href="#">New Target <span class="d-none d-sm-inline">Application</span></a>
+          <a class="btn btn-info font-weight-bold" href="classic.html">New Classic <span class="d-none d-sm-inline">Application</span></a> 
+          <a class="btn btn-primary font-weight-bold" href="target.html">New Target <span class="d-none d-sm-inline">Application</span></a>
         </div>
         <div class="col-md-3"></div>
         <div class="col-md-3">
             <div class="float-right pt-3 badge-icon">
-                <span>Explorer</span> <img class="img-fluid" src="assets/img/full-star.png" width="30px">
+                <span>Explorer</span> <img class="img-fluid" src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/full-star.png" width="30px">
             </div>
         </div>
       </div>
@@ -77,7 +80,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="card text-white bg-dark mb-3">
+              <div class="card text-white bg-primary mb-3">
                 <div class="card-header small font-weight-bold">View Investment</div>
                 <div class="card-body">
                   <h5 class="card-title">Target Naira</h5>
@@ -90,7 +93,7 @@
                 <div class="card-header small font-weight-bold">View Investment</div>
                 <div class="card-body">
                   <h5 class="card-title">Doubble 3</h5>
-                  <p class="card-text">December 2018 - December 2020<br>Beneficiary: Anita Okoko</p>
+                  <p class="card-text">December 2018 - December 2020<br>Beneficiary: Jane Doe</p>
                 </div>
               </div>
             </div>
@@ -104,16 +107,23 @@
               </div>
             </div>
           </div>
+          <div class="row">
+              <div class="col-md-12">
+                <ul class="pagination text-center">
+                  <li class="page-item active"> <a class="page-link small" href="investments.html">View All Transaction</a></li>
+                </ul>
+              </div>
+            </div>
         </div>
         <div class="col-md-4">
           <div class="list-group">
             <div class="blockquote rounded-sm">
               <h5 class="mb-1">Open a Dollar Account</h5>
               <div class="mb-2 small">You need a Dollar Account now to start your Dollar Target Invest.</div>
-              <a class="btn btn-primary btn-sm" href="#">Open Dollar Account</a>
+              <a class="btn btn-danger btn-sm" href="#">Open Dollar Account</a>
             </div>
             <ul class="list-group">
-              <a href="accounts.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Accounts<br><i class="fa fa-list text-muted fa-lg"></i></li></a>
+              <a href="dashboard.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Dashboard<br><i class="fa fa-home text-muted fa-lg"></i></li></a><a href="accounts.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Accounts<br><i class="fa fa-list text-muted fa-lg"></i></li></a>
               <a href="investments.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Investments<br><i class="fa fa-pie-chart text-muted fa-lg"></i></li></a>
               <a href="faq.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Frequently Asked Questions<br><i class="fa fa-book text-muted fa-lg"></i></li></a>
               <a href="settings.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Change Password<br><i class="fa fa-cog text-muted fa-lg"></i></li></a>
@@ -132,7 +142,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="assets/js/parallax.js"></script>
+  <script src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/parallax.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
   <script>
     $(document).ready(function() {
