--- a/investments.html
+++ b/investments.html
@@ -12,18 +12,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.min.css">
-    <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+    <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
+    
     <title>My Investments - Doubble by Sterling</title>
-    <meta name="description" content="Doubble is an investment">
-    <meta name="keywords" content="Money, Investment">
+    <meta name="description" content="My Investment - Doubble is an automated investment platform for investment at your convenience and get back up to 200% over a period. With Doubble, you choose to invest in Naira or US Dollar, either in one contribution (lump sum) or monthly, quarterly, bi-annual or annual automated contributions.">
+    <meta name="keywords" content="money, Investment, Superb returns, Automated Investment platform, Investment products, Guaranteed returns, Doubble, double, long term investment, short term investment, money market, treasury bills, personal finance, personal financial planning, financial">
     <meta name="author" content="Doubble by Sterling Bank Plc">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/favicon.ico">
     <!-- CSS dependencies -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
         type="text/css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="assets/css/devices.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/main.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/custom.css">
+    <link rel="stylesheet" href="https://d32wlusbkxfia2.cloudfront.net/v2/assets/css/devices.css">
     <script src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/navbar-ontop.js"></script>
 </head>
 
@@ -37,6 +38,8 @@
                     <a class="nav-link dropdown-toggle  text-primary" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i></a>
                     <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 36px, 0px); top: 0px; left: -120px; will-change: transform;">
+                        <a class="dropdown-item" href="dashboard.html">Dashboard</a>
+                        <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="investments.html">My Investments</a>
                         <a class="dropdown-item" href="accounts.html">My Accounts</a>
                         <a class="dropdown-item" href="faq.html">Doubble FAQ</a>
@@ -53,13 +56,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1 class="display-1 welcome-title">Welcome! Otobong</h1>
-                    <a class="btn btn-danger font-weight-bold" href="#">New Classic <span class="d-none d-sm-inline">Application</span></a>
-                    <a class="btn btn-info font-weight-bold .d-sm-none .d-md-block" href="#">New Target <span class="d-none d-sm-inline">Application</span></a>
+                    <a class="btn btn-info font-weight-bold" href="classic.html">New Classic <span class="d-none d-sm-inline">Application</span></a>
+                    <a class="btn btn-primary font-weight-bold" href="target.html">New Target <span class="d-none d-sm-inline">Application</span></a>
                 </div>
                 <div class="col-md-3"></div>
                 <div class="col-md-3">
                     <div class="float-right pt-3 badge-icon">
-                        Explorer <img class="img-fluid" src="assets/img/full-star.png" width="30px">
+                        Explorer <img class="img-fluid" src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/img/full-star.png" width="30px">
                     </div>
                 </div>
             </div>
@@ -70,9 +73,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="row">
-                        <h1 class="lead welcome-title text-uppercase pl-3 mb-3 font-weight-bold d-block">My Investments</h1>
-                        <div class="d-block pl-3 pt-1">All Investments on <b>Doubble</b></div>
+                    <h1 class="lead welcome-title text-uppercase pl-3 mb-3 font-weight-bold d-block">My Investments</h1>
+                    <div class="row pl-3">
+                        <div class="d-block pl-3 pt-1">All Investments on <b>Classic Doubble</b></div>
                         <div class="table-responsive px-3">
                             <table class="table table-striped table-borderless">
                                 <thead>
@@ -87,34 +90,20 @@
                                 <tbody>
                                     <tr>
                                         <th scope="row">1</th>
-                                        <td>Target Dollar</td>
-                                        <td>1 Year</td>
-                                        <td>Self</td>
-                                        <td><a class="btn btn-info btn-sm font-weight-bold" href="#">View <span class="d-none d-sm-inline">Details</span></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Target Naira</td>
-                                        <td>1 Year</td>
-                                        <td>Jane Doe</td>
-                                        <td><a class="btn btn-info btn-sm font-weight-bold" href="#">View <span class="d-none d-sm-inline">Details</span></a></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
                                         <td>Lump Sum</td>
                                         <td>2 Years</td>
                                         <td>Self</td>
                                         <td><a class="btn btn-info btn-sm font-weight-bold" href="#">View <span class="d-none d-sm-inline">Details</span></a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">4</th>
+                                        <th scope="row">2</th>
                                         <td>Doubble 3</td>
                                         <td>3 Years</td>
                                         <td>Self</td>
                                         <td><a class="btn btn-info btn-sm font-weight-bold" href="#">View <span class="d-none d-sm-inline">Details</span></a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">5</th>
+                                        <th scope="row">3</th>
                                         <td>Doubble 1</td>
                                         <td>1 Year</td>
                                         <td>Self</td>
@@ -124,15 +113,48 @@
                             </table>
                         </div>
                     </div>
+                    <div class="row pl-3">
+                            <div class="d-block pl-3 pt-1">All Investments on <b>Target Doubble</b></div>
+                            <div class="table-responsive px-3">
+                                <table class="table table-striped table-borderless">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Type</th>
+                                            <th scope="col">Duration</th>
+                                            <th scope="col">Beneficiaries</th>
+                                            <th scope="col">Details</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row">1</th>
+                                            <td>Target Dollar</td>
+                                            <td>1 Year</td>
+                                            <td>Self</td>
+                                            <td><a class="btn btn-info btn-sm font-weight-bold" href="#">View <span class="d-none d-sm-inline">Details</span></a></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row">2</th>
+                                            <td>Target Naira</td>
+                                            <td>1 Year</td>
+                                            <td>Jane Doe</td>
+                                            <td><a class="btn btn-info btn-sm font-weight-bold" href="#">View <span class="d-none d-sm-inline">Details</span></a></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                 </div>
                 <div class="col-md-4">
                     <div class="list-group">
                         <div class="blockquote rounded-sm">
                             <h5 class="mb-1">Open a Dollar Account</h5>
                             <div class="mb-2 small">You need a Dollar Account now to start your Dollar Target Invest.</div>
-                            <a class="btn btn-primary btn-sm" href="#">Open Dollar Account</a>
+                            <a class="btn btn-danger btn-sm" href="#">Open Dollar Account</a>
                         </div>
                         <ul class="list-group">
+                            <a href="dashboard.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Dashboard<br><i class="fa fa-home text-muted fa-lg"></i></li></a>
                             <a href="accounts.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Accounts<br><i class="fa fa-list text-muted fa-lg"></i></li></a>
                             <a href="investments.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">My Investments<br><i class="fa fa-pie-chart text-muted fa-lg"></i></li></a>
                             <a href="faq.html" class="text-muted"><li class=" border-0 list-group-item d-flex justify-content-between align-items-center text-uppercase">Frequently Asked Questions<br><i class="fa fa-book text-muted fa-lg"></i></li></a>
@@ -155,7 +177,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="assets/js/parallax.js"></script>
+    <script src="https://d32wlusbkxfia2.cloudfront.net/v2/assets/js/parallax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
     <script>
         $(document).ready(function () {
